# remesher

./: .gitignore  README.md  config.json.example  pyproject.toml
examples/: img_to_trellis2.json  qwen_image_2512.json  qwen_image_edit_2511.json  qwen_to_trellis2_api.json  rig_glb_mia.json
src/comfy_prompt_cli/: __init__.py
