[project]
name = "comfy-prompt-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Gold", email = "goldmichael@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer[all]>=0.24.1",
]

[project.scripts]
comfy-prompt-cli = "comfy_prompt_cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
